--- a/antes/Item02/CasaDoCodigo/Areas/Carrinho/Views/Home/Index.cshtml
+++ b/antes/Item02/CasaDoCodigo/Areas/Carrinho/Views/Home/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@{
-    ViewData["Title"] = "Carrinho";
-}
+﻿@{ ViewData["Title"] = "Carrinho"; }
 
 @model CarrinhoViewModel;
 
@@ -9,18 +7,8 @@
 <form method="post" asp-area="carrinho" asp-controller="home" asp-action="index">
 </form>
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="pull-right">
-            <a class="btn btn-success" href="/">
-                Adicionar Produtos
-            </a>
-            <a class="btn btn-success" asp-area="cadastro">
-                Preencher Cadastro
-            </a>
-        </div>
-    </div>
-</div>
+@*@await Html.PartialAsync("_NavegacaoCarrinho")*@
+<partial name="_NavegacaoCarrinho"/>
 <br />
 <div class="panel panel-default">
     <div class="panel-heading">
@@ -45,39 +33,37 @@
     <div class="panel-body">
         @foreach (var item in Model.Itens)
         {
-            <div class="row row-center linha-produto" item-id="@item.Id">
-                <div class="col-md-3">
-                    <img class="img-produto-carrinho" src="/images/produtos/large_@(item.Produto.Codigo).jpg" />
-                </div>
-                <div class="col-md-3">@(item.Produto.Nome)</div>
-                <div class="col-md-2 text-center">R$ @(item.PrecoUnitario)</div>
-                <div class="col-md-2 text-center">
-                    <div class="input-group">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default"
-                                    onclick="carrinho.clickDecremento(this)">
-                                <span class="glyphicon-minus"></span>
-                            </button>
-                        </span>
-                        <input type="text" value="@(item.Quantidade)"
-                               class="form-control text-center"
-                               onblur="carrinho.updateQuantidade(this)" />
-                        <span class="input-group-btn">
-                            <button class="btn btn-default"
-                                    onclick="carrinho.clickIncremento(this)">
-                                <span class="glyphicon-plus"></span>
-                            </button>
-                        </span>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    R$ <span class="pull-right" subtotal>
-                        @(item.Quantidade * item.PrecoUnitario)
-                    </span>
-                </div>
-            </div>
-
-        }
+<div class="row row-center linha-produto" item-id="@item.Id">
+    <div class="col-md-3">
+        <img class="img-produto-carrinho" src="/images/produtos/large_@(item.Produto.Codigo).jpg" />
+    </div>
+    <div class="col-md-3">@(item.Produto.Nome)</div>
+    <div class="col-md-2 text-center">R$ @(item.PrecoUnitario)</div>
+    <div class="col-md-2 text-center">
+        <div class="input-group">
+            <span class="input-group-btn">
+                <button class="btn btn-default"
+                        onclick="carrinho.clickDecremento(this)">
+                    <span class="glyphicon-minus"></span>
+                </button>
+            </span>
+            <input type="text" value="@(item.Quantidade)"
+                   class="form-control text-center"
+                   onblur="carrinho.updateQuantidade(this)" />
+            <span class="input-group-btn">
+                <button class="btn btn-default"
+                        onclick="carrinho.clickIncremento(this)">
+                    <span class="glyphicon-plus"></span>
+                </button>
+            </span>
+        </div>
+    </div>
+    <div class="col-md-2">
+        R$ <span class="pull-right" subtotal>
+            @(item.Quantidade * item.PrecoUnitario)
+        </span>
+    </div>
+</div>}
 
     </div>
     <div class="panel-footer">
@@ -97,22 +83,10 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="pull-right">
-            <a class="btn btn-success" href="/">
-                Adicionar Produtos
-            </a>
-            <a class="btn btn-success" asp-area="cadastro">
-                Preencher Cadastro
-            </a>
-        </div>
-    </div>
-</div>
+@*@await Html.PartialAsync("_NavegacaoCarrinho")*@
+<partial name="_NavegacaoCarrinho"/>
 
 @section Scripts
 {
-    <script src="~/js/carrinho.js">
-
-    </script>
+    <script src="~/js/carrinho.js"></script>
 }
