Partial views in the Razor Views

--- a/antes/Item02/CasaDoCodigo/Areas/Pedido/Views/Home/Index.cshtml
+++ b/antes/Item02/CasaDoCodigo/Areas/Pedido/Views/Home/Index.cshtml
@@ -6,15 +6,7 @@
 
 <h3>Resumo do Pedido</h3>
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="pull-right">
-            <a class="btn btn-success" href="/">
-                Voltar ao Catálogo
-            </a>
-        </div>
-    </div>
-</div>
+<partial name="_NavegacaoPedido" />
 <br />
 <div class="panel panel-default">
     <div class="panel-body">
@@ -65,12 +57,4 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="pull-right">
-            <a class="btn btn-success" href="/">
-                Voltar ao Catálogo
-            </a>
-        </div>
-    </div>
-</div>
+<partial name="_NavegacaoPedido"/>
