--- a/antes/Item02/CasaDoCodigo/Areas/Cadastro/Views/Home/Index.cshtml
+++ b/antes/Item02/CasaDoCodigo/Areas/Cadastro/Views/Home/Index.cshtml
@@ -101,17 +101,7 @@
 
                 </div>
 
-                <div class="form-group">
-                    <a class="btn btn-success" href="/">
-                        Continuar Comprando
-                    </a>
-                </div>
-                <div class="form-group">
-                    <button type="submit"
-                            class="btn btn-success">
-                        Finalizar Pedido
-                    </button>
-                </div>
+                <partial name="_NavegacaoCadastro"/>
             </div>
         </div>
     </div>
