--- a/antes/Item02/CasaDoCodigo/Areas/Catalogo/Views/Home/Index.cshtml
+++ b/antes/Item02/CasaDoCodigo/Areas/Catalogo/Views/Home/Index.cshtml
@@ -42,22 +42,7 @@
                         @foreach (var produto in produtosDaPagina)
                         {
 
-                            <div class="col-md-3 col-sm-3 col-lg-3">
-                                <div class="panel panel-default">
-                                    <div class="panel-body">
-                                        <img class="img-produto-carrossel center-block" src="/images/produtos/large_@(produto.Codigo).jpg" />
-                                    </div>
-                                    <div class="panel-footer produto-footer">
-                                        <div class="produto-nome">@produto.Nome</div>
-                                        <div><h4><strong>R$ @produto.Preco</strong></h4></div>
-                                        <div class="text-center">
-                                            <a asp-area="" asp-controller="pedido" asp-action="carrinho"
-                                               asp-route-codigo="@produto.Codigo"
-                                               class="btn btn-success">Adicionar</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            <partial name="_ProdutoCard" model="produto"/>
                         }
                     </div>
                 </div>
